// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformSFC > basic 1`] = `
"const array: (number | string)[] = [1, 2, 3]

<template><div ...attributes>
  template
</div></template>
      "
`;

exports[`transformSFC > cn helper with classes 1`] = `
"const array: (number | string)[] = [1, 2, 3]

<template><div class={{cn
  "relative z-50 max-h-96 min-w-32 overflow-hidden rounded-md border bg-popover text-popover-foreground shadow-md data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
  @class
}}>
  {{123}}
</div></template>
      "
`;

exports[`transformSFC > defineEmits 1`] = `
"import Component from '@glimmer/component';

interface Signature {
  Args: {
    onFoo?: (value: string) => void;
  };
}

export default class extends Component<Signature> {}

<template></template>
      "
`;

exports[`transformSFC > defineProps 1`] = `
"import Component from '@glimmer/component';

interface Signature {
  Args: { foo: string };
}

export default class extends Component<Signature> {}

<template></template>
      "
`;

exports[`transformSFC > defineProps with external props 1`] = `
"import Component from '@glimmer/component';
import { type Props } from './__fixtures__/props'

interface Signature {
  Args: { foo?: string } & Props;
}

export default class extends Component<Signature> {
  get foo() {
    return this.args.foo ?? 'bar';
  }
}

<template></template>
      "
`;

exports[`transformSFC > defineProps with package props 1`] = `
"import Component from '@glimmer/component';
import { type LabelProps } from 'reka-ui'

interface Signature {
  Args: { foo?: string } & LabelProps;
}

export default class extends Component<Signature> {
  get foo() {
    return this.args.foo ?? 'bar';
  }
}

<template></template>
      "
`;

exports[`transformSFC > defineProps with withDefaults 1`] = `
"import Component from '@glimmer/component';

interface Signature {
  Args: { foo?: string };
}

export default class extends Component<Signature> {
  get foo() {
    return this.args.foo ?? 'bar';
  }
}

<template></template>
      "
`;

exports[`transformSFC > type annotations preserved 1`] = `
"const array: (number | string)[] = [1, 2, 3]

<template><div ...attributes>
  {{123}}
</div></template>
      "
`;
